--- a/src/main/webapp/herokuGWTMavenSample.html
+++ b/src/main/webapp/herokuGWTMavenSample.html
@@ -17,7 +17,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>HOLA !!! Web Application Starter Project</title>
+    <title>HOLA PEPE !!! Web Application Starter Project</title>
 
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
@@ -45,7 +45,7 @@
       </div>
     </noscript>
 
-    <h1>KC? Web Application Starter Project</h1>
+    <h1>KC? TUTTO YELMO .. Web Application Starter Project</h1>
 
     <table align="center">
       <tr>
